--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.6",
     "@japa/preset-adonis": "^1.2.0",
-    "@japa/runner": "^2.5.1",
+    "@japa/runner": "2.5.1",
     "@types/proxy-addr": "^2.0.3",
     "@types/source-map-support": "^0.5.10",
     "adonis-preset-ts": "^2.1.0",
@@ -55,8 +55,8 @@
     "youch-terminal": "^2.2.3"
   },
   "dependencies": {
-    "@adonisjs/core": "^5.9.0",
-    "@adonisjs/repl": "^3.1.11",
+    "@adonisjs/core": "^5.8.0",
+    "@adonisjs/repl": "^3.1.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.2.1",
     "source-map-support": "^0.5.21"
