--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,3 +3,13 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=so4SBL8Lokl0iPwhgAux5t4Znv6U4WqP
 DRIVE_DISK=local
+DB_CONNECTION=mysql
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
