add controllers for User and Blog

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,3 +9,5 @@ MYSQL_PORT=3306
 MYSQL_USER=lucid
 MYSQL_PASSWORD=
 MYSQL_DB_NAME=lucid
+GCS_KEY_FILENAME=./google-cloud-key.json
+GCS_BUCKET=bucketName
