--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "astro": "^4.2.1",
-    "typescript": "^5.3.3"
+    "react": "^18.2.0",
+    "typescript": "^5.3.3",
+    "undici": "^6.6.0"
   }
 }
