--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.1",
   "scripts": {
     "prepare": "panda codegen",
-    "panda": "panda -w",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
@@ -13,9 +12,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^3.0.9",
     "astro": "^4.2.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
-    "undici": "^6.6.0"
+    "undici": "^6.6.1"
+  },
+  "devDependencies": {
+    "@pandacss/dev": "^0.30.1"
   }
 }
