first function post run

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "include": ["src", "styled-system"]
+  "include": ["src", "styled-system"],
+  "compilerOptions": {
+    "jsx": "react"
+  }
 }
