--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/netlify": "^5.1.2",
+    "@astrojs/node": "^8.2.1",
     "@astrojs/react": "^3.0.9",
     "astro": "^4.2.1",
     "axios": "^1.6.7",
