--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   ],
   "devDependencies": {
     "prettier": "^3.0.0"
+  },
+  "dependencies": {
+    "pino-pretty": "^11.0.0",
+    "shikiji-core": "^0.10.2",
+    "typescript": "^5.4.4",
+    "vite": "^5.2.8"
   }
 }
